# gh-events

./: .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
data/db/: github_events.duckdb
src/: dashboard.py  ingest.py  materialize_duckdb.py  transform.py
src/api/: main.py
src/config/: filtered_events.yaml  metrics.yaml
src/models/: metrics_config.py
src/utils/: db_utils.py  defaults.py  event_utils.py  file_ops.py  metrics.py
tests/: test_ingestion.py  test_metrics.py  test_transformation.py
