[tool.poetry]
name = "gh-events"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
fastapi = "^0.116.0"
httpx = "^0.28.1"
pandas = "^2.3.1"
pyyaml = "^6.0.2"
duckdb = "^1.3.2"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pytest = "^8.4.1"
streamlit = "^1.46.1"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
